fixes location padding on mobile and justifies text in mobility on mobile

--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -89,6 +89,13 @@ body
 .body-section-small-margin-bottom
   padding-bottom: 100px !important
 
+@media (min-width: 768px)
+  .locations
+    .content-wrapper
+      .container
+        .body-section
+          padding-top: 0
+          background-color: $white
 
 footer
   background-color: $white
